-
Bug
-
Resolution: Done
-
P0: Blocker
-
6.2.3, 6.3.0 Feature Freeze
-
None
-
b874c82084dff4c3e2707cc077946de65be3d499 (qt/qtscxml/dev) 15def58d024602a176d676d48ecf236399d6cdc3 (qt/qtscxml/6.2)
agent:2021/11/26 21:26:53 build.go:394: In file included from /Users/qt/work/qt/qtscxml/src/statemachineqml/state.cpp:40: agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state_p.h:92:66: error: unknown type name 'm_childrenComputedProperty' agent:2021/11/26 21:26:53 build.go:394: Q_OBJECT_COMPUTED_PROPERTY(State, QQmlListProperty<QObject>, m_childrenComputedProperty, agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state_p.h:93:40: error: parameter declarator cannot be qualified agent:2021/11/26 21:26:53 build.go:394: &State::childrenActualCalculation); agent:2021/11/26 21:26:53 build.go:394: ~~~~~~~^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state_p.h:93:40: error: C++ requires a type specifier for all declarations agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state_p.h:92:5: error: C++ requires a type specifier for all declarations agent:2021/11/26 21:26:53 build.go:394: Q_OBJECT_COMPUTED_PROPERTY(State, QQmlListProperty<QObject>, m_childrenComputedProperty, agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state.cpp:74:12: error: use of undeclared identifier 'm_childrenComputedProperty' agent:2021/11/26 21:26:53 build.go:394: return m_childrenComputedProperty; agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state.cpp:79:5: error: use of undeclared identifier 'm_childrenComputedProperty' agent:2021/11/26 21:26:53 build.go:394: m_childrenComputedProperty.notify(); agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state.cpp:83:45: error: implicit instantiation of undefined template 'TestNamespace::QBindable<TestNamespace::QQmlListProperty<TestNamespace::QObject>>' agent:2021/11/26 21:26:53 build.go:394: QBindable<QQmlListProperty<QObject>> State::bindableChildren() const agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/install/include/QtCore/qobject.h:66:29: note: template is declared here agent:2021/11/26 21:26:53 build.go:394: template <typename T> class QBindable; agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: /Users/qt/work/qt/qtscxml/src/statemachineqml/state.cpp:85:13: error: use of undeclared identifier 'm_childrenComputedProperty' agent:2021/11/26 21:26:53 build.go:394: return &m_childrenComputedProperty; agent:2021/11/26 21:26:53 build.go:394: ^ agent:2021/11/26 21:26:53 build.go:394: 8 errors generated.
Details: https://testresults.qt.io/coin/integration/qt/qtscxml/tasks/1637972394
Tested changes (refs/builds/qtci/dev/1637956612):
https://codereview.qt-project.org/c/qt/qtscxml/+/383372/2 Update dependencies on 'dev' in qt/qtscxml