Fix build with newer qtbase

qproperty.h is no longer transitively included

Fixes: QTBUG-98738
Pick-to: 6.2
Change-Id: I73b8e02fae554b844f53c63781f0bc7d5754542b
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>